version/0.21/_sources/api/solver/_autosummary/settings/electric_conductivity_1.rst.txt
:orphan:

.. _electric_conductivity_1:

electric_conductivity
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.electric_conductivity_1.electric_conductivity
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_12>`                                          Select method for calculating material property.

:ref:`value <value_11>`                                                        Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                   Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

:ref:`user_defined_function <user_defined_function>`                                 Specify user defined function.

====================================================   ============================================================

.. rubric:: Included in:

======================================================   ============================================

Parent                                                                                        Summary

======================================================   ============================================
:ref:`inert_particle_child <inert_particle_child>`             'child_object_type' of inert_particle.

:ref:`droplet_particle_child <droplet_particle_child>`       'child_object_type' of droplet_particle.

:ref:`material_child <material_child_1>`                             'child_object_type' of material.

======================================================   ============================================

